[GWT20] refactor artifacts and packages

--- a/gwt20/samples/gwt20-jersey-demo/src/main/webapp/index.html
+++ b/gwt20/samples/gwt20-jersey-demo/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>GWT wrapper for atmosphere.js</title>
+        <title>GWT Jersey Demo for atmosphere</title>
         
         <!--                                           -->
         <!-- This script loads your compiled module.   -->
@@ -37,7 +37,7 @@
         <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
             style="position:absolute;width:0;height:0;border:0"></iframe>
 
-        <h1>GWT wrapper for atmosphere.js</h1>
+        <h1>GWT Jersey Demo for atmosphere</h1>
         <div id="buttonbar"></div>
         <div id="logger"></div>
     </body>
